CSCEXAM-000 Migrate to Play 2.9.0