@@ -15,7 +15,6 @@
 
 package controllers.iop.transfer.impl;
 
-import akka.actor.ActorSystem;
 import be.objectify.deadbolt.java.actions.SubjectNotPresent;
 import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.ObjectMapper;
@@ -29,12 +28,13 @@ import controllers.iop.transfer.api.ExternalExamAPI;
 import impl.AutoEvaluationHandler;
 import impl.EmailComposer;
 import impl.NoShowHandler;
-import io.ebean.Ebean;
+import io.ebean.DB;
 import io.ebean.Query;
 import io.ebean.text.PathProperties;
 import io.ebean.text.json.EJson;
 import java.io.IOException;
 import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URL;
 import java.util.ArrayList;
 import java.util.Collections;
@@ -68,9 +68,11 @@ import models.questions.Question;
 import models.sections.ExamSection;
 import models.sections.ExamSectionQuestion;
 import models.sections.ExamSectionQuestionOption;
+import org.apache.pekko.actor.ActorSystem;
 import org.joda.time.DateTime;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.springframework.beans.BeanUtils;
-import play.Logger;
 import play.db.ebean.Transactional;
 import play.libs.Json;
 import play.libs.ws.WSClient;
@@ -110,7 +112,7 @@ public class ExternalExamController extends BaseController implements ExternalEx
     @Inject
     private ConfigReader configReader;
 
-    private static final Logger.ALogger logger = Logger.of(ExternalExamController.class);
+    private final Logger logger = LoggerFactory.getLogger(ExternalExamController.class);
 
     private Exam createCopy(Exam src, Exam parent, User user) {
         Exam clone = new Exam();
@@ -184,7 +186,7 @@ public class ExternalExamController extends BaseController implements ExternalEx
         if (ee == null) {
             return wrapAsPromise(badRequest());
         }
-        Exam parent = Ebean.find(Exam.class).where().eq("hash", ee.getExternalRef()).findOne();
+        Exam parent = DB.find(Exam.class).where().eq("hash", ee.getExternalRef()).findOne();
         if (parent == null && enrolment.getCollaborativeExam() == null) {
             return wrapAsPromise(notFound());
         }
@@ -408,7 +410,7 @@ public class ExternalExamController extends BaseController implements ExternalEx
     }
 
     private static Query<ExamEnrolment> createQuery() {
-        Query<ExamEnrolment> query = Ebean.find(ExamEnrolment.class);
+        Query<ExamEnrolment> query = DB.find(ExamEnrolment.class);
         PathProperties props = ExaminationController.getPath(true);
         props.apply(query);
         return query;
@@ -428,6 +430,6 @@ public class ExternalExamController extends BaseController implements ExternalEx
 
     private URL parseUrl(Object... args) throws MalformedURLException {
         final String path = args.length < 1 ? "/api/enrolments/%s" : String.format("/api/enrolments/%s", args);
-        return new URL(configReader.getIopHost() + path);
+        return URI.create(configReader.getIopHost() + path).toURL();
     }
 }
